# zgame-new

./: CMakeLists.txt  LICENSE  readme.md
core/header/: clock.hpp  game.hpp  logger.hpp  window.hpp  windowSettings.hpp
core/src/: clock.cpp  engine.cpp  game.cpp  logger.cpp
utils/: formats.hpp  stringutils.hpp
